--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-custom navbar-fixed-top" style="margin-top: 20px">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -48,15 +48,15 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right" style="padding-right: 10px;">
                     <li>
-                        <a href="#p">PLATFORM</a>
+                        <a href="#p" style="color: #9cafc3">PLATFORM</a>
                     </li>
                     <li>
-                        <a href="#">ABOUT</a>
+                        <a href="#" style="color: #9cafc3">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#" style="border: 1px solid #FF3355">SIGN UP</a>
+                        <a href="#" style="border: 2px solid #9cafc3; border-radius: 1px; margin: 14px 0px 0px 20px; padding: 5px 20px 5px 20px; color: #9cafc3;">SIGN UP</a>
                     </li>
                 </ul>
             </div>
@@ -67,12 +67,24 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/people2-50over.jpg'); height: 800px; margin-bottom: 0px;">
+    <header class="intro-header" style="background-image: url('img/Header_back.png'); height: 800px; margin-bottom: 0px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-2"></div>
-                <div class="col-lg-8 ">
-                    <div class="embed-responsive embed-responsive-16by9" style="margin-top: 378px">
+                <div class="col-lg-8">
+                    
+                </div>
+                <div class="col-lg-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8" style="margin-top: 125px;">
+                    <h1 class="white-text avenir" style="vertical-align: central; text-align: center; font-size: 2em; font-weight:normal;">A VIEW CAN SAY A THOUSAND WORDS - AND NOW IT WILL!</h1>
+                    <p></p>
+                    <p class="white-text avenir" style=" vertical-align: middle; text-align: center; font-size:1em">
+                        Bringing a new way we see apps
+                    </p>
+                    <div class="embed-responsive embed-responsive-16by9" style="margin-top: 84px">
                         <iframe class="embed-responsive-item pull-bottom" src="https://www.youtube.com/embed/7dmr_o9m3KQ"></iframe>
                     </div>
                 </div>
@@ -83,7 +95,21 @@
 
     <!-- Main Content -->
     <div class="">
-        <section class="" style="background-color: #555; height: 800px">
+        <section class="" style="background-color: #ffffff; height: 600px">
+            <div class="container">
+                <div row>
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8" style="vertical-align: central; text-align: center; font-size: 1.5em;">
+                        <p>Have you ever felt lost? New places may cause anxiety or confusion? What if wherever you go your path could be enlightened with bright new meanings? "Geolocation" and "augmented reality" are not just buzzwords in the tech world, but also a key to deliver a whole new world of discoveries and exploration to you.
+                        We use both components to allow you to immerse yourself into vibrant and mysterious environments, and we also to empower you to create your own.
+                        Or are you a local business that feels how the stream of customers flows away in an arm reach of you? There is a way to make your offers more vocal to those for whom they matter!
+                        <p>It doesn't matter whether you are a lonely traveler, a tour company, a restaurant owner, a passionate live action game advocate or a person with good supply of curiosity to satisfy: EXP-Lore is here to help the many.</p>
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div>
+            </div>
+        </section>
+        <section class="" style="background-color: #f3f5f8; height: 800px">
             <div class="container">
                 <div class="row">
                     <div class="span4"></div>
@@ -92,16 +118,42 @@
                 </div>
             </div>
         </section>
-        <section class="" style="background-color: #eee; height: 800px">
-
+        <section class="" style="background-color: #ffffff; height: 800px">
+            <div class="container">
+                <div class="row">
+                    <div class="span4"></div>
+                    <div class="span4"></div>
+                    <div class="span4"></div>
+                </div>
+            </div>
         </section>
-        <section class="" style="background-color: #777; height: 800px">
-
+        <section class="" style="background-color: #f3f5f8; height: 400px">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8" style="margin-top: 100px">
+                        <h1 class="gray-text" style="font-weight:normal; vertical-align: central; text-align: center;">GET IN TOUCH</h1>
+                        <p></p>
+                        <span class="gray-text"  style="vertical-align: central; text-align: center; font-size: 1em;">Learn more how to use our product and sign up to our newsletter.</span>
+                        <table style="margin-top: 50px;">
+                            <tr>
+                                <td>
+                                    <input type="text" class="form-control" placeholder="add your email" style="width: 90%" />
+                                </td>
+                                <td>
+                                    <a href="#" style="font-size: 0.75em; border: 2px solid #9cafc3; border-radius: 1px; padding: 5px 10px 5px 10px; padding: 5px 20px 5px 20px; color: #9cafc3;">SUBSCRIBE</a>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div>
+            </div>
         </section>
     </div>
 
     <!-- Footer -->
-    <footer style="background-color:#555;">
+    <footer style="background-color:#ffffff;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
