--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 </head>
 
-<body>
+<body style="padding-top: 20px; background-color:#3e54ff">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-custom navbar-fixed-top" style="margin-top: 20px">
+    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -78,13 +78,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-2"></div>
-                <div class="col-lg-8" style="margin-top: 125px;">
+                <div class="col-lg-8" style="margin-top: 150px;">
                     <h1 class="white-text avenir" style="vertical-align: central; text-align: center; font-size: 2em; font-weight:normal;">A VIEW CAN SAY A THOUSAND WORDS - AND NOW IT WILL!</h1>
                     <p></p>
-                    <p class="white-text avenir" style=" vertical-align: middle; text-align: center; font-size:1em">
+                    <p class="white-text avenir" style="vertical-align: middle; text-align: center; font-size:0.9em;font-weight: normal;">
                         Bringing a new way we see apps
                     </p>
-                    <div class="embed-responsive embed-responsive-16by9" style="margin-top: 84px">
+                    <div class="embed-responsive embed-responsive-16by9" style="margin-top: 62px">
                         <iframe class="embed-responsive-item pull-bottom" src="https://www.youtube.com/embed/7dmr_o9m3KQ"></iframe>
                     </div>
                 </div>
@@ -95,15 +95,15 @@
 
     <!-- Main Content -->
     <div class="">
-        <section class="" style="background-color: #ffffff; height: 600px">
-            <div class="container">
+        <section class="" style="background-color: #ffffff; height: 425px">
+            <div class="">
                 <div row>
                     <div class="col-lg-2"></div>
-                    <div class="col-lg-8" style="vertical-align: central; text-align: center; font-size: 1.5em;">
-                        <p>Have you ever felt lost? New places may cause anxiety or confusion? What if wherever you go your path could be enlightened with bright new meanings? "Geolocation" and "augmented reality" are not just buzzwords in the tech world, but also a key to deliver a whole new world of discoveries and exploration to you.
+                    <div class="col-lg-8" style="vertical-align: central; text-align: center; font-size: 1em; padding-top:50px;">
+                        <p class="gray-text">Have you ever felt lost? New places may cause anxiety or confusion? What if wherever you go your path could be enlightened with bright new meanings? "Geolocation" and "augmented reality" are not just buzzwords in the tech world, but also a key to deliver a whole new world of discoveries and exploration to you.
                         We use both components to allow you to immerse yourself into vibrant and mysterious environments, and we also to empower you to create your own.
                         Or are you a local business that feels how the stream of customers flows away in an arm reach of you? There is a way to make your offers more vocal to those for whom they matter!
-                        <p>It doesn't matter whether you are a lonely traveler, a tour company, a restaurant owner, a passionate live action game advocate or a person with good supply of curiosity to satisfy: EXP-Lore is here to help the many.</p>
+                        <p class="gray-text">It doesn't matter whether you are a lonely traveler, a tour company, a restaurant owner, a passionate live action game advocate or a person with good supply of curiosity to satisfy: EXP-Lore is here to help the many.</p>
                     </div>
                     <div class="col-lg-2"></div>
                 </div>
@@ -112,13 +112,47 @@
         <section class="" style="background-color: #f3f5f8; height: 800px">
             <div class="container">
                 <div class="row">
+                    <table class="gray-text" ; style="text-align: center;">
+                        <tr>
+                            <td style="width:20%"></td>
+                            <td style="width:60%; padding-bottom: 50px;"><h1 style="font-weight: normal">WHY USE IT?</h1></td>
+                            <td style="width:20%"></td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 0.8em">Unique sets of locations with unique interactive 3D elements</td>
+                            <td rowspan="3" style="width: 100px"><img class="img-responsive" style="max-width:40%; margin: auto;" src="img/mock_exp_1024.png" /></td>
+                            <td style="font-size: 0.8em">Toolbox to create your own worlds of remarkable places to visit</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 0.8em">Integration of Augmented Reality elements in liaison with geographic coordinates</td>
+                            <td style="font-size: 0.8em">Flexible system of locations management to provide for even the most wild and uncommon uses scenarios</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 0.8em">Maps stock exchange: make you efforts pay back. Sell the finest products of your mapmaker's efforts for other users to enjoy</td>
+                            <td style="font-size: 0.8em">Make your business in the path of those who are next to you: use the benefits of location-context advertising with rich visuals</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 0.8em"></td>
+                            <td style="font-size: 0.6em; padding-top:50px;"><a href="#" style="border: 2px solid #9cafc3; border-radius: 1px; padding: 5px 10px 5px 10px; padding: 5px 20px 5px 20px; color: #9cafc3;">TRY IT OUT</a></td>
+                            <td style="font-size: 0.8em"></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </section>
+        <section class="" style="background-color: #ffffff; height: 450px">
+            <div class="container">
+                <div class="row">
                     <div class="span4"></div>
-                    <div class="span4"><img class="center-block img-responsive" src="img/mock_exp_1024.png" style="width:25%; margin-top: 100px;"/></div>
+                    <div class="span4">
+                        <h1 class="gray-text" style="font-weight: normal; text-align: center;">WHAT THEY SAY ABOUT US?</h1>
+
+                    </div>
                     <div class="span4"></div>
                 </div>
             </div>
         </section>
-        <section class="" style="background-color: #ffffff; height: 800px">
+        <section class="" style="background-color: #000; height: 800px">
             <div class="container">
                 <div class="row">
                     <div class="span4"></div>
@@ -132,10 +166,10 @@
                 <div class="row">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8" style="margin-top: 100px">
-                        <h1 class="gray-text" style="font-weight:normal; vertical-align: central; text-align: center;">GET IN TOUCH</h1>
+                        <h1 class="gray-text" style="font-weight: normal; vertical-align: central; text-align: center;">GET IN TOUCH</h1>
                         <p></p>
-                        <span class="gray-text"  style="vertical-align: central; text-align: center; font-size: 1em;">Learn more how to use our product and sign up to our newsletter.</span>
-                        <table style="margin-top: 50px;">
+                        <p class="gray-text"  style="vertical-align: central; text-align: center; font-size: 1em;">Learn more how to use our product and sign up to our newsletter.</p>
+                        <table style="margin-top: 50px; width: 500px;">
                             <tr>
                                 <td>
                                     <input type="text" class="form-control" placeholder="add your email" style="width: 90%" />
