--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right" style="padding-right: 10px;">
                     <li>
-                        <a href="#p" style="color: #9cafc3">PLATFORM</a>
+                        <a href="#p" style="color: #9cafc3">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#" style="color: #9cafc3">ABOUT</a>
+                        <a href="#p" style="color: #9cafc3">FUTURE</a>
+                    </li>
+                    <li>
+                        <a href="#" style="color: #9cafc3">CONTACT</a>
                     </li>
                     <li>
                         <a href="#" style="border: 2px solid #9cafc3; border-radius: 1px; margin: 14px 0px 0px 20px; padding: 5px 20px 5px 20px; color: #9cafc3;">SIGN UP</a>
@@ -79,13 +82,13 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8" style="margin-top: 150px;">
-                    <h1 class="white-text avenir" style="vertical-align: central; text-align: center; font-size: 2em; font-weight:normal;">A VIEW CAN SAY A THOUSAND WORDS - AND NOW IT WILL!</h1>
+                    <h1 class="white-text avenir" style="vertical-align: central; text-align: center; font-size: 2em; font-weight:normal;">A view can say a thousand words, and now it will.</h1>
                     <p></p>
-                    <p class="white-text avenir" style="vertical-align: middle; text-align: center; font-size:0.9em;font-weight: normal;">
-                        Bringing a new way we see apps
+                    <p class="white-text avenir" style="vertical-align: middle; text-align: center; font-size:0.8em;font-weight: normal;">
+                        Bringing a new dimension to apps
                     </p>
-                    <div class="embed-responsive embed-responsive-16by9" style="margin-top: 62px">
-                        <iframe class="embed-responsive-item pull-bottom" src="https://www.youtube.com/embed/7dmr_o9m3KQ"></iframe>
+                    <div class="embed-responsive embed-responsive-16by9" style="margin-top: 65px">
+                        <iframe class="embed-responsive-item pull-bottom" src="https://www.youtube.com/embed/Q7w-SGw7ZFs"></iframe>
                     </div>
                 </div>
                 <div class="col-lg-2"></div>
@@ -95,17 +98,23 @@
 
     <!-- Main Content -->
     <div class="">
-        <section class="" style="background-color: #ffffff; height: 425px">
+        <section class="" style="background-color: #ffffff; height: 800px">
             <div class="">
-                <div row>
-                    <div class="col-lg-2"></div>
-                    <div class="col-lg-8" style="vertical-align: central; text-align: center; font-size: 1em; padding-top:50px;">
-                        <p class="gray-text">Have you ever felt lost? New places may cause anxiety or confusion? What if wherever you go your path could be enlightened with bright new meanings? "Geolocation" and "augmented reality" are not just buzzwords in the tech world, but also a key to deliver a whole new world of discoveries and exploration to you.
-                        We use both components to allow you to immerse yourself into vibrant and mysterious environments, and we also to empower you to create your own.
-                        Or are you a local business that feels how the stream of customers flows away in an arm reach of you? There is a way to make your offers more vocal to those for whom they matter!
-                        <p class="gray-text">It doesn't matter whether you are a lonely traveler, a tour company, a restaurant owner, a passionate live action game advocate or a person with good supply of curiosity to satisfy: EXP-Lore is here to help the many.</p>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <h1 class="gray-text" style="font-weight: normal; text-align: center;">Augmented Reality (AR)?</h1>
+                        <br />
+                        <br />
+                        <img style="width:60%; position:relative;" src="img/Screen Shot 2017-04-09 at 3.35.33 PM.png" />
+                        <img style="width:20%; position:relative;" src="img/img_00651.jpg" />
+                        <br />
+                        <br />
+                        <br />
+                        <h1 class="gray-text" style="font-weight: normal; text-align: center;">Predictions</h1>
+                        <img style="" src="img/pred.PNG"/>
                     </div>
-                    <div class="col-lg-2"></div>
+                    <div class="col-md-2"></div>
                 </div>
             </div>
         </section>
@@ -115,21 +124,21 @@
                     <table class="gray-text" ; style="text-align: center;">
                         <tr>
                             <td style="width:20%"></td>
-                            <td style="width:60%; padding-bottom: 50px;"><h1 style="font-weight: normal">WHY USE IT?</h1></td>
+                            <td style="width:60%; padding-bottom: 50px;"><h1 style="font-weight: normal">Features</h1></td>
                             <td style="width:20%"></td>
                         </tr>
                         <tr>
-                            <td style="font-size: 0.8em">Unique sets of locations with unique interactive 3D elements</td>
+                            <td style="font-size: 0.8em"><h1>GPS with a twist</h1>Unique sets of locations with unique interactive 3D elements</td>
                             <td rowspan="3" style="width: 100px"><img class="img-responsive" style="max-width:40%; margin: auto;" src="img/mock_exp_1024.png" /></td>
-                            <td style="font-size: 0.8em">Toolbox to create your own worlds of remarkable places to visit</td>
+                            <td style="font-size: 0.8em"><h1>Badges and discounts</h1>Learning about your city has never been so fun! Earn badges and discounts from your favourite shops and compete with your friends.</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 0.8em">Integration of Augmented Reality elements in liaison with geographic coordinates</td>
-                            <td style="font-size: 0.8em">Flexible system of locations management to provide for even the most wild and uncommon uses scenarios</td>
+                            <td style="font-size: 0.8em"><h1>Clean design</h1>We aim to offer minimalistic design, to let you forget there’s an app between you and the real world.</td>
+                            <td style="font-size: 0.8em"><h1>Flexible</h1>Flexible system of locations management to provide for even the most wild and uncommon usecases.</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 0.8em">Maps stock exchange: make you efforts pay back. Sell the finest products of your mapmaker's efforts for other users to enjoy</td>
-                            <td style="font-size: 0.8em">Make your business in the path of those who are next to you: use the benefits of location-context advertising with rich visuals</td>
+                            <td style="font-size: 0.8em"><h1>Route creation</h1>Let’s you pinpoint the locales for your outing and gives and estimated visit time. Create and share your routes.</td>
+                            <td style="font-size: 0.8em"><h1>Affordable & scalable</h1>From a smart phone, that is easily accessible to the public, the app can be scaled to different hardware solutions.</td>
                         </tr>
                         <tr>
                             <td style="font-size: 0.8em"></td>
@@ -137,27 +146,6 @@
                             <td style="font-size: 0.8em"></td>
                         </tr>
                     </table>
-                </div>
-            </div>
-        </section>
-        <section class="" style="background-color: #ffffff; height: 450px">
-            <div class="container">
-                <div class="row">
-                    <div class="span4"></div>
-                    <div class="span4">
-                        <h1 class="gray-text" style="font-weight: normal; text-align: center;">WHAT THEY SAY ABOUT US?</h1>
-
-                    </div>
-                    <div class="span4"></div>
-                </div>
-            </div>
-        </section>
-        <section class="" style="background-color: #000; height: 800px">
-            <div class="container">
-                <div class="row">
-                    <div class="span4"></div>
-                    <div class="span4"></div>
-                    <div class="span4"></div>
                 </div>
             </div>
         </section>
