changed one section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body style="padding-top: 20px; background-color:#3e54ff">
+<body style="padding-top: 50px; background-color:#3e54ff">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
@@ -128,21 +128,21 @@
                             <td style="width:20%"></td>
                         </tr>
                         <tr>
-                            <td style="font-size: 0.8em"><h1>GPS with a twist</h1>Unique sets of locations with unique interactive 3D elements</td>
+                            <td style="font-size: 0.8em"><h1 style="font-size: 1em">GPS with a twist</h1>Unique sets of locations with unique interactive 3D elements</td>
                             <td rowspan="3" style="width: 100px"><img class="img-responsive" style="max-width:40%; margin: auto;" src="img/mock_exp_1024.png" /></td>
-                            <td style="font-size: 0.8em"><h1>Badges and discounts</h1>Learning about your city has never been so fun! Earn badges and discounts from your favourite shops and compete with your friends.</td>
+                            <td style="font-size: 0.8em"><h1 style="font-size: 1em">Badges and discounts</h1>Learning about your city has never been so fun! Earn badges and discounts from your favourite shops and compete with your friends.</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 0.8em"><h1>Clean design</h1>We aim to offer minimalistic design, to let you forget there’s an app between you and the real world.</td>
-                            <td style="font-size: 0.8em"><h1>Flexible</h1>Flexible system of locations management to provide for even the most wild and uncommon usecases.</td>
+                            <td style="font-size: 0.8em"><h1 style="font-size: 1em">Clean design</h1>We aim to offer minimalistic design, to let you forget there’s an app between you and the real world.</td>
+                            <td style="font-size: 0.8em"><h1 style="font-size: 1em">Flexible</h1>Flexible system of locations management to provide for even the most wild and uncommon usecases.</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 0.8em"><h1>Route creation</h1>Let’s you pinpoint the locales for your outing and gives and estimated visit time. Create and share your routes.</td>
-                            <td style="font-size: 0.8em"><h1>Affordable & scalable</h1>From a smart phone, that is easily accessible to the public, the app can be scaled to different hardware solutions.</td>
+                            <td style="font-size: 0.8em"><h1  style="font-size: 1em">Route creation</h1>Let’s you pinpoint the locales for your outing and gives and estimated visit time. Create and share your routes.</td>
+                            <td style="font-size: 0.8em"><h1  style="font-size: 1em">Affordable & scalable</h1>From a smart phone, that is easily accessible to the public, the app can be scaled to different hardware solutions.</td>
                         </tr>
                         <tr>
                             <td style="font-size: 0.8em"></td>
-                            <td style="font-size: 0.6em; padding-top:50px;"><a href="#" style="border: 2px solid #9cafc3; border-radius: 1px; padding: 5px 10px 5px 10px; padding: 5px 20px 5px 20px; color: #9cafc3;">TRY IT OUT</a></td>
+                            <td style="font-size: 0.6em; padding-top:50px;"><a href="https://projects.invisionapp.com/share/RUB86ZS7E" style="border: 2px solid #FF3355; border-radius: 1px; padding: 5px 10px 5px 10px; padding: 5px 20px 5px 20px; color: #FF3355;">TRY IT OUT</a></td>
                             <td style="font-size: 0.8em"></td>
                         </tr>
                     </table>
