--- a/index.html
+++ b/index.html
@@ -157,13 +157,14 @@
                         <h1 class="gray-text" style="font-weight: normal; vertical-align: central; text-align: center;">GET IN TOUCH</h1>
                         <p></p>
                         <p class="gray-text"  style="vertical-align: central; text-align: center; font-size: 1em;">Learn more how to use our product and sign up to our newsletter.</p>
-                        <table style="margin-top: 50px; width: 500px;">
+                        <br />
+                        <table style="margin-top: 50px; width: 500px; margin: auto;">
                             <tr>
                                 <td>
                                     <input type="text" class="form-control" placeholder="add your email" style="width: 90%" />
                                 </td>
                                 <td>
-                                    <a href="#" style="font-size: 0.75em; border: 2px solid #9cafc3; border-radius: 1px; padding: 5px 10px 5px 10px; padding: 5px 20px 5px 20px; color: #9cafc3;">SUBSCRIBE</a>
+                                    <a href="#" style="font-size: 0.75em; border: 2px solid #FF3355; border-radius: 1px; padding: 5px 10px 5px 10px; padding: 5px 20px 5px 20px; color: #FF3355; ">SUBSCRIBE</a>
                                 </td>
                             </tr>
                         </table>
