--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body style="padding-top: 50px; background-color:#3e54ff">
+<body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
@@ -106,8 +106,8 @@
                         <h1 class="gray-text" style="font-weight: normal; text-align: center;">Augmented Reality (AR)?</h1>
                         <br />
                         <br />
-                        <img style="width:60%; position:relative;" src="img/Screen Shot 2017-04-09 at 3.35.33 PM.png" />
-                        <img style="width:20%; position:relative;" src="img/img_00651.jpg" />
+                        <img style="width:74%; position:relative;" src="img/Screen Shot 2017-04-09 at 3.35.33 PM.png" />
+                        <img style="width:24%; position:relative;" src="img/img_00651.jpg" />
                         <br />
                         <br />
                         <br />
