--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         Bringing a new dimension to apps
                     </p>
                     <div class="embed-responsive embed-responsive-16by9" style="margin-top: 65px">
-                        <iframe class="embed-responsive-item pull-bottom" src="https://www.youtube.com/embed/Q7w-SGw7ZFs"></iframe>
+                        <iframe class="embed-responsive-item pull-bottom" src="https://www.youtube.com/embed/Q7w-SGw7ZFs" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-lg-2"></div>
@@ -98,9 +98,9 @@
 
     <!-- Main Content -->
     <div class="">
-        <section class="" style="background-color: #ffffff; height: 800px">
+        <section class="" style="background-color: #ffffff; height: 850px">
             <div class="">
-                <div class="row">
+                <div class="row" style="padding-top:30px;">
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <h1 class="gray-text" style="font-weight: normal; text-align: center;">Augmented Reality (AR)?</h1>
@@ -120,8 +120,8 @@
         </section>
         <section class="" style="background-color: #f3f5f8; height: 800px">
             <div class="container">
-                <div class="row">
-                    <table class="gray-text" ; style="text-align: center;">
+                <div class="row" style="padding-top:20px">
+                    <table class="gray-text" ; style="text-align: center; ">
                         <tr>
                             <td style="width:20%"></td>
                             <td style="width:60%; padding-bottom: 50px;"><h1 style="font-weight: normal">Features</h1></td>
