some after fixes

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </section>
-        <section class="" style="background-color: #f3f5f8; height: 400px">
+        <section class="" style="background-color: #ffffff; height: 400px">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-2"></div>
@@ -176,7 +176,7 @@
     </div>
 
     <!-- Footer -->
-    <footer style="background-color:#ffffff;">
+    <footer style="background-color:#f3f5f8;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
