did more minor changes

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right" style="padding-right: 10px;">
                     <li>
-                        <a href="#p" style="color: #9cafc3">ABOUT</a>
+                        <a href="#future" style="color: #9cafc3">FUTURE</a>
                     </li>
                     <li>
-                        <a href="#p" style="color: #9cafc3">FUTURE</a>
+                        <a href="#features" style="color: #9cafc3">FEATURES</a>
                     </li>
                     <li>
-                        <a href="#" style="color: #9cafc3">CONTACT</a>
+                        <a href="#getintouch" style="color: #9cafc3">GET IN TOUCH</a>
                     </li>
                     <li>
                         <a href="#" style="border: 2px solid #9cafc3; border-radius: 1px; margin: 14px 0px 0px 20px; padding: 5px 20px 5px 20px; color: #9cafc3;">SIGN UP</a>
@@ -98,7 +98,7 @@
 
     <!-- Main Content -->
     <div class="">
-        <section class="" style="background-color: #ffffff; height: 850px">
+        <section id="future" class="F" style="background-color: #ffffff; height: 850px">
             <div class="">
                 <div class="row" style="padding-top:30px;">
                     <div class="col-md-2"></div>
@@ -118,9 +118,9 @@
                 </div>
             </div>
         </section>
-        <section class="" style="background-color: #f3f5f8; height: 800px">
+        <section id="features" class="" style="background-color: #f3f5f8; height: 820px">
             <div class="container">
-                <div class="row" style="padding-top:20px">
+                <div class="row" style="padding-top:20px;">
                     <table class="gray-text" ; style="text-align: center; ">
                         <tr>
                             <td style="width:20%"></td>
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </section>
-        <section class="" style="background-color: #ffffff; height: 400px">
+        <section id="getintouch" class="" style="background-color: #ffffff; height: 400px">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-2"></div>
